SERVER-73819 Allow internal errors to escape DBDirectClient